# hypermedia-systems-django

./: .pre-commit-config.yaml  pyproject.toml
accounts/migrations/: 0001_initial.py
project/: settings.py
